# python-debug-vscode-docker

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.base.yml  docker-compose.debug.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
src/: text_adventure.py
tests/: test_main.py
